--- a/detail.html
+++ b/detail.html
@@ -49,7 +49,7 @@
             <p class="mb-2"><strong>Energy Density (E<sub>d</sub>):</strong> <span id="ed"></span> kJ/g</p>
             <p class="mb-2"><strong>Detonation Velocity (V<sub>d</sub>):</strong> <span id="vd"></span> km/s</p>
             <p class="mb-2"><strong>Detonation Pressure (P<sub>d</sub>):</strong> <span id="pd"></span> GPa</p>
-            <p class="mb-2"><strong>Reaction:</strong> <span id="reaction"></span></p>
+            <p class="mb-2"><strong>Decomposing Reaction:</strong> <span id="reaction"></span></p>
             <p class="mb-2"><strong>Energy:</strong> <span id="energy"></span></p>
             <p class="mb-4"><strong>doi:</strong> <span id="doi"></span></p>
             
